--- a/index.html
+++ b/index.html
@@ -406,9 +406,9 @@
     </nav>
 
     <div class="actions">
-      <a href="booking.html" class="btn-solid free-booking" data-analytics="cta_book_strategy_call">Book Strategy
+      <a href="/contact.html#contact-form" class="btn-solid free-booking" data-analytics="cta_book_strategy_call">Book Strategy
         Call</a>
-      <a href="proposal.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
+      <a href="/proposal.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
       <button type="button" id="menu-btn" class="btn menu-btn" aria-controls="mobile-nav" aria-expanded="false"
         aria-label="Open menu">
         <i class="fa-solid fa-bars icon-menu" aria-hidden="true"></i>
