--- a/professional-training/operation-supply-chain.html
+++ b/professional-training/operation-supply-chain.html
@@ -178,9 +178,6 @@
     </script>
   </head>
   <body>
-    <!-- Skip link for keyboard / screen reader users -->
-    
-
     <!-- Scroll-to-top button -->
     <button
       id="backToTop"
@@ -218,7 +215,7 @@
                 <ul role="list" class="mega-col">
                   <li role="listitem" class="mega-col-list">
                     Talent Management &amp; HR Solutions
-                    <a href="/services/talent-management-hr"
+                    <a href="/services/talent-management-hr-solution.html"
                       ><i class="fa-solid fa-link" aria-hidden="true"></i>
                       Explore</a
                     >
@@ -230,7 +227,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/recruitment-selection"
+                        <a href="/talent-management-hr-solution/recruitment-selection.html"
                           ><strong>Recruitment &amp; Selection</strong>
                           <div class="item-sub">
                             Structured hiring that aligns skills, culture and
@@ -245,7 +242,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/training-development"
+                        <a href="/talent-management-hr-solution/training-development.html"
                           ><strong>Training &amp; Development</strong>
                           <div class="item-sub">
                             Targeted learning programmes that grow capability
@@ -260,7 +257,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/talent-payroll-outsourcing"
+                        <a href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
                           ><strong>Talent &amp; Payroll Outsourcing</strong>
                           <div class="item-sub">
                             End-to-end HR and payroll operations managed with
@@ -275,7 +272,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/background-checks-verification"
+                        <a href="/talent-management-hr-solution/background-checks-verification.html"
                           ><strong>Background Checks &amp; Verification</strong>
                           <div class="item-sub">
                             Structured screening that protects your organisation
@@ -287,7 +284,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-book icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="/services/hr-policies-employee-handbook"
+                        <a href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
                           ><strong>HR Policies &amp; Employee Handbook</strong>
                           <div class="item-sub">
                             Clear, practical people policies and handbooks that
@@ -302,7 +299,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/career-services"
+                        <a href="/talent-management-hr-solution/career-service.html"
                           ><strong>Career Services</strong>
                           <div class="item-sub">
                             CV, LinkedIn and interview preparation that elevate
@@ -318,7 +315,7 @@
                 <ul role="list" class="mega-col">
                   <li role="listitem" class="mega-col-list">
                     Business Development &amp; Strategy
-                    <a href="/services/business-strategy"
+                    <a href="/services/business-development-strategy.html"
                       ><i class="fa-solid fa-link" aria-hidden="true"></i>
                       Explore</a
                     >
@@ -330,7 +327,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/market-research-business-analysis"
+                        <a href="/business-development/market-research-business-analysis.html"
                           ><strong
                             >Market Research &amp; Business Analysis</strong
                           >
@@ -347,7 +344,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/business-model-structure-design"
+                        <a href="/business-development/business-model-structure-design.html"
                           ><strong
                             >Business Model &amp; Structure Design</strong
                           >
@@ -364,7 +361,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/corporate-strategy-execution"
+                        <a href="/business-development/corporate-strategy-execution.html"
                           ><strong>Corporate Strategy &amp; Execution</strong>
                           <div class="item-sub">
                             Translating vision into measurable, trackable
@@ -379,7 +376,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/corporate-branding"
+                        <a href="/business-development/corporate-branding.html"
                           ><strong>Corporate Branding</strong>
                           <div class="item-sub">
                             Brand positioning and identity that build trust with
@@ -391,7 +388,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-gears icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="/services/business-process-optimization"
+                        <a href="/business-development/business-process-optimization.html"
                           ><strong>Business Process Optimization</strong>
                           <div class="item-sub">
                             Lean, efficient processes that remove friction from
@@ -403,7 +400,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-coins icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="/services/financial-modeling-valuation"
+                        <a href="/business-development/financial-modeling-valuation.html"
                           ><strong>Financial Modeling &amp; Valuation</strong>
                           <div class="item-sub">
                             Clarity on business value, projections and capital
@@ -418,7 +415,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/auditing-reconciliation"
+                        <a href="/business-development/auditing-reconciliation.html"
                           ><strong>Auditing &amp; Reconciliation</strong>
                           <div class="item-sub">
                             Independent review and alignment of financial and
@@ -432,9 +429,9 @@
 
                 <!-- Professional Training Programmes -->
                 <ul role="list" class="mega-col">
-                  <li role="listitem" class="mega-col-list">
+                  <li role="listitem" class="mega-col-list active-navlink">
                     Professional Training Programmes
-                    <a href="/services/training-programmes"
+                    <a href="/services/professional-training-programme.html" class="active-navlink"
                       ><i class="fa-solid fa-link" aria-hidden="true"></i>
                       Explore</a
                     >
@@ -446,7 +443,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/leadership-management"
+                        <a href="/professional-training/leadership-management.html"
                           ><strong>Leadership &amp; Management</strong>
                           <div class="item-sub">
                             Programmes that grow leaders who can align people,
@@ -458,7 +455,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-users icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="/services/hr-people-management-training"
+                        <a href="/professional-training/hr-people-maagement-training.html"
                           ><strong>HR &amp; People Management</strong>
                           <div class="item-sub">
                             Practical HR training that builds modern people
@@ -473,7 +470,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/finance-accounting-training"
+                        <a href="/professional-training/finance-accounting.html"
                           ><strong>Finance &amp; Accounting</strong>
                           <div class="item-sub">
                             Financial literacy and reporting skills across your
@@ -488,7 +485,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/technology-data-training"
+                        <a href="/professional-training/technology-data.html"
                           ><strong>Technology &amp; Data</strong>
                           <div class="item-sub">
                             Excel, Power BI, Python and analytics for
@@ -501,8 +498,8 @@
                       <i class="fa-solid fa-truck icon" aria-hidden="true"></i>
                       <div class="item-text">
                         <a
-                          href="/services/operations-supply-chain-training"
-                          aria-current="page"
+                          href="/professional-training/operation-supply-chain.html"
+                          aria-current="page" class="active-navlink"
                           ><strong>Operations &amp; Supply Chain</strong>
                           <div class="item-sub">
                             Capacity building for procurement, logistics and
@@ -518,7 +515,7 @@
                       ></i>
                       <div class="item-text">
                         <a
-                          href="/services/health-safety-environment-hse-training"
+                          href="/professional-training/health-safety-environment.html"
                           ><strong
                             >Health, Safety &amp; Environment (HSE)</strong
                           >
@@ -535,7 +532,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/sales-marketing-training"
+                        <a href="/professional-training/sales-marketing.html"
                           ><strong>Sales &amp; Marketing</strong>
                           <div class="item-sub">
                             Capability-building for client acquisition and
@@ -638,32 +635,32 @@
                 </button>
                 <ul id="m-hr-list" class="section-list" aria-hidden="true">
                   <li>
-                    <a href="/services/recruitment-selection"
+                    <a href="/talent-management-hr-solution/recruitment-selection.html"
                       >Recruitment &amp; Selection</a
                     >
                   </li>
                   <li>
-                    <a href="/services/training-development"
+                    <a href="/talent-management-hr-solution/training-development.html"
                       >Training &amp; Development</a
                     >
                   </li>
                   <li>
-                    <a href="/services/talent-payroll-outsourcing"
+                    <a href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
                       >Talent &amp; Payroll Outsourcing</a
                     >
                   </li>
                   <li>
-                    <a href="/services/background-checks-verification"
+                    <a href="/talent-management-hr-solution/background-checks-verification.html"
                       >Background Checks &amp; Verification</a
                     >
                   </li>
                   <li>
-                    <a href="/services/hr-policies-employee-handbook"
+                    <a href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
                       >HR Policies &amp; Employee Handbook</a
                     >
                   </li>
                   <li>
-                    <a href="/services/career-services">Career Services</a>
+                    <a href="/talent-management-hr-solution/career-service.html">Career Services</a>
                   </li>
                 </ul>
               </div>
@@ -685,35 +682,35 @@
                 </button>
                 <ul id="m-biz-list" class="section-list" aria-hidden="true">
                   <li>
-                    <a href="/services/market-research-business-analysis"
+                    <a href="/business-development/market-research-business-analysis.html"
                       >Market Research &amp; Business Analysis</a
                     >
                   </li>
                   <li>
-                    <a href="/services/business-model-structure-design"
+                    <a href="/business-development/business-model-structure-design.html"
                       >Business Model &amp; Structure Design</a
                     >
                   </li>
                   <li>
-                    <a href="/services/corporate-strategy-execution"
+                    <a href="/business-development/corporate-strategy-execution.html"
                       >Corporate Strategy &amp; Execution</a
                     >
                   </li>
                   <li>
-                    <a href="/services/corporate-branding">Corporate Branding</a>
+                    <a href="/business-development/corporate-branding.html">Corporate Branding</a>
                   </li>
                   <li>
-                    <a href="/services/business-process-optimization"
+                    <a href="/business-development/business-process-optimization.html"
                       >Business Process Optimization</a
                     >
                   </li>
                   <li>
-                    <a href="/services/financial-modeling-valuation"
+                    <a href="/business-development/financial-modeling-valuation.html"
                       >Financial Modeling &amp; Valuation</a
                     >
                   </li>
                   <li>
-                    <a href="/services/auditing-reconciliation"
+                    <a href="/business-development/auditing-reconciliation.html"
                       >Auditing &amp; Reconciliation</a
                     >
                   </li>
@@ -737,39 +734,39 @@
                 </button>
                 <ul id="m-train-list" class="section-list" aria-hidden="true">
                   <li>
-                    <a href="/services/leadership-management"
+                    <a href="/professional-training/leadership-management.html"
                       >Leadership &amp; Management</a
                     >
                   </li>
                   <li>
-                    <a href="/services/hr-people-management-training"
+                    <a href="/professional-training/hr-people-maagement-training.html"
                       >HR &amp; People Management</a
                     >
                   </li>
                   <li>
-                    <a href="/services/finance-accounting-training"
+                    <a href="/professional-training/finance-accounting.html"
                       >Finance &amp; Accounting</a
                     >
                   </li>
                   <li>
-                    <a href="/services/technology-data-training"
+                    <a href="/professional-training/technology-data.html"
                       >Technology &amp; Data</a
                     >
                   </li>
                   <li>
                     <a
-                      href="/services/operations-supply-chain-training"
+                      href="/professional-training/operation-supply-chain.html"
                       aria-current="page"
                       >Operations &amp; Supply Chain</a
                     >
                   </li>
                   <li>
-                    <a href="/services/health-safety-environment-hse-training"
+                    <a href="/professional-training/health-safety-environment.html"
                       >Health, Safety &amp; Environment (HSE)</a
                     >
                   </li>
                   <li>
-                    <a href="/services/sales-marketing-training"
+                    <a href="/professional-training/sales-marketing.html"
                       >Sales &amp; Marketing</a
                     >
                   </li>
@@ -780,7 +777,7 @@
 
           <li><a href="/about.html">About us</a></li>
           <li><a href="/contact.html">Contact us</a></li>
-          <li><a href="/resources">Resources</a></li>
+          <!-- <li><a href="/resources">Resources</a></li> -->
         </ul>
       </nav>
     </header>
@@ -791,7 +788,7 @@
         <li><a href="/index.html">Home</a></li>
         <li><a href="/service.html">Services</a></li>
         <li>
-          <a href="/services/training-programmes"
+          <a href="/services/professional-training-programme.html"
             >Professional Training Programmes</a
           >
         </li>
