--- a/proposal.html
+++ b/proposal.html
@@ -118,7 +118,7 @@
                 <ul role="list" class="mega-col">
                   <li role="listitem" class="mega-col-list">
                     Talent Management &amp; HR Solutions
-                    <a href="/services/talent-management-hr"
+                    <a href="/services/talent-management-hr-solution.html"
                       ><i class="fa-solid fa-link" aria-hidden="true"></i>
                       Explore</a
                     >
@@ -130,7 +130,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/recruitment-selection"
+                        <a href="/talent-management-hr-solution/recruitment-selection.html"
                           ><strong>Recruitment &amp; Selection</strong>
                           <div class="item-sub">
                             Structured hiring that aligns skills, culture and
@@ -145,7 +145,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/training-development"
+                        <a href="/talent-management-hr-solution/training-development.html"
                           ><strong>Training &amp; Development</strong>
                           <div class="item-sub">
                             Targeted learning programmes that grow capability
@@ -160,7 +160,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/talent-payroll-outsourcing"
+                        <a href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
                           ><strong>Talent &amp; Payroll Outsourcing</strong>
                           <div class="item-sub">
                             End-to-end HR and payroll operations managed with
@@ -175,7 +175,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/background-checks-verification"
+                        <a href="/talent-management-hr-solution/background-checks-verification.html"
                           ><strong>Background Checks &amp; Verification</strong>
                           <div class="item-sub">
                             Structured screening that protects your organisation
@@ -187,7 +187,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-book icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="/services/hr-policies-employee-handbook"
+                        <a href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
                           ><strong>HR Policies &amp; Employee Handbook</strong>
                           <div class="item-sub">
                             Clear, practical people policies and handbooks that
@@ -202,7 +202,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/career-services"
+                        <a href="/talent-management-hr-solution/career-service.html"
                           ><strong>Career Services</strong>
                           <div class="item-sub">
                             CV, LinkedIn and interview preparation that elevate
@@ -230,7 +230,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/market-research-business-analysis"
+                        <a href="/business-development/market-research-business-analysis.html"
                           ><strong
                             >Market Research &amp; Business Analysis</strong
                           >
@@ -247,7 +247,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/business-model-structure-design"
+                        <a href="/business-development/business-model-structure-design.html"
                           ><strong
                             >Business Model &amp; Structure Design</strong
                           >
@@ -264,7 +264,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/corporate-strategy-execution"
+                        <a href="/business-development/corporate-strategy-execution.html"
                           ><strong>Corporate Strategy &amp; Execution</strong>
                           <div class="item-sub">
                             Translating vision into measurable, trackable
@@ -279,7 +279,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/corporate-branding"
+                        <a href="/business-development/corporate-branding.html"
                           ><strong>Corporate Branding</strong>
                           <div class="item-sub">
                             Brand positioning and identity that build trust with
@@ -291,7 +291,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-gears icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="/services/business-process-optimization"
+                        <a href="/business-development/business-process-optimization.html"
                           ><strong>Business Process Optimization</strong>
                           <div class="item-sub">
                             Lean, efficient processes that remove friction from
@@ -303,7 +303,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-coins icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a href="/services/financial-modeling-valuation"
+                        <a href="/business-development/financial-modeling-valuation.html"
                           ><strong>Financial Modeling &amp; Valuation</strong>
                           <div class="item-sub">
                             Clarity on business value, projections and capital
@@ -318,7 +318,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a href="/services/auditing-reconciliation"
+                        <a href="/business-development/auditing-reconciliation.html"
                           ><strong>Auditing &amp; Reconciliation</strong>
                           <div class="item-sub">
                             Independent review and alignment of financial and
@@ -334,7 +334,7 @@
                 <ul role="list" class="mega-col">
                   <li role="listitem" class="mega-col-list">
                     Professional Training Programmes
-                    <a href="/services/training-programmes"
+                    <a href="/services/professional-training-programme.html"
                       ><i class="fa-solid fa-link" aria-hidden="true"></i>
                       Explore</a
                     >
@@ -533,32 +533,32 @@
                 </button>
                 <ul id="m-hr-list" class="section-list" aria-hidden="true">
                   <li>
-                    <a href="/services/recruitment-selection"
+                    <a href="/talent-management-hr-solution/recruitment-selection.html"
                       >Recruitment &amp; Selection</a
                     >
                   </li>
                   <li>
-                    <a href="/services/training-development"
+                    <a href="/talent-management-hr-solution/training-development.html"
                       >Training &amp; Development</a
                     >
                   </li>
                   <li>
-                    <a href="/services/talent-payroll-outsourcing"
+                    <a href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
                       >Talent &amp; Payroll Outsourcing</a
                     >
                   </li>
                   <li>
-                    <a href="/services/background-checks-verification"
+                    <a href="/talent-management-hr-solution/background-checks-verification.html"
                       >Background Checks &amp; Verification</a
                     >
                   </li>
                   <li>
-                    <a href="/services/hr-policies-employee-handbook"
+                    <a href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
                       >HR Policies &amp; Employee Handbook</a
                     >
                   </li>
                   <li>
-                    <a href="/services/career-services">Career Services</a>
+                    <a href="/talent-management-hr-solution/career-service.html">Career Services</a>
                   </li>
                 </ul>
               </div>
@@ -580,37 +580,37 @@
                 </button>
                 <ul id="m-biz-list" class="section-list" aria-hidden="true">
                   <li>
-                    <a href="/services/market-research-business-analysis"
+                    <a href="/business-development/market-research-business-analysis.html"
                       >Market Research &amp; Business Analysis</a
                     >
                   </li>
                   <li>
-                    <a href="/services/business-model-structure-design"
+                    <a href="/business-development/business-model-structure-design.html"
                       >Business Model &amp; Structure Design</a
                     >
                   </li>
                   <li>
-                    <a href="/services/corporate-strategy-execution"
+                    <a href="/business-development/corporate-strategy-execution.html"
                       >Corporate Strategy &amp; Execution</a
                     >
                   </li>
                   <li>
-                    <a href="/services/corporate-branding"
+                    <a href="/business-development/corporate-branding.html"
                       >Corporate Branding</a
                     >
                   </li>
                   <li>
-                    <a href="/services/business-process-optimization"
+                    <a href="/business-development/business-process-optimization.html"
                       >Business Process Optimization</a
                     >
                   </li>
                   <li>
-                    <a href="/services/financial-modeling-valuation"
+                    <a href="/business-development/financial-modeling-valuation.html"
                       >Financial Modeling &amp; Valuation</a
                     >
                   </li>
                   <li>
-                    <a href="/services/auditing-reconciliation"
+                    <a href="/business-development/auditing-reconciliation.html"
                       >Auditing &amp; Reconciliation</a
                     >
                   </li>
