--- a/services/professional-training-programme.html
+++ b/services/professional-training-programme.html
@@ -343,9 +343,9 @@
                 </ul>
 
                 <ul role="list" class="mega-col">
-                  <li role="listitem" class="mega-col-list">
+                  <li role="listitem" class="mega-col-list active-navlink">
                     Professional Training Programmes
-                    <a href="/services/professional-training-programme.html"
+                    <a href="/services/professional-training-programme.html" class="active-navlink"
                       ><i class="fa-solid fa-link"></i> Explore</a
                     >
                   </li>
