--- a/about.html
+++ b/about.html
@@ -809,7 +809,7 @@
               </div>
             </div>
           </li>
-          <li><a href="/about.html">About us</a></li>
+          <li><a href="/about.html" class="active">About us</a></li>
           <li><a href="/contact.html">Contact us</a></li>
           <!-- <li><a href="/resources">Resources</a></li> -->
         </ul>
