--- a/index.html
+++ b/index.html
@@ -1435,7 +1435,7 @@
     </p>
 
     <div data-aos="fade-up" data-aos="fade-down" class="hero-links">
-      <a href="booking.html" class="btn-solid" data-analytics="cta_book_strategy_call">Book Strategy Call</a>
+      <a href="booking.html" class="btn-solid" data-analytics="cta_book_strategy_call">Book a Call</a>
       <a href="contact.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
     </div>
   </section>
