--- a/service.html
+++ b/service.html
@@ -1345,7 +1345,7 @@
       </p>
 
       <div data-aos="fade-up" data-aos="fade-down">
-        <a href="booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="booking.html" class="btn-solid">Book a Call</a>
         <a href="contact.html" class="btn-ghost">Request Proposal</a>
       </div>
     </section>
