--- a/about.html
+++ b/about.html
@@ -1543,7 +1543,7 @@
           href="/booking.html"
           class="btn-solid"
           data-analytics="cta_book_strategy_call"
-          >Book Strategy Call</a
+          >Book a Call</a
         >
         <a
           href="/contact.html"
