--- a/about.html
+++ b/about.html
@@ -1538,7 +1538,7 @@
         excellence.
       </p>
 
-      <div class="hero-links" data-aos="fade-up">
+      <div class="hero-links" data-aos="fade-up"  class="cta-calls" id="cta-calls">
         <a
           href="/booking.html"
           class="btn-solid"
