--- a/business-development/business-model-structure-design.html
+++ b/business-development/business-model-structure-design.html
@@ -1715,7 +1715,7 @@
         governance with the future you are building.
       </p>
 
-      <div data-aos="fade-up" data-aos="fade-down">
+      <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
         <a href="booking.html" class="btn-solid">Book a session</a>
         <a href="contact.html" class="btn-ghost">Request Proposal</a>
       </div>
