--- a/services/business-development-strategy.html
+++ b/services/business-development-strategy.html
@@ -1635,7 +1635,7 @@
           It may be a strategy and structure problem—not effort. Book a
           conversation with CICL to map where to focus first.
         </p>
-        <div class="service-cta__actions">
+        <div class="service-cta__actions" class="cta-calls" id="cta-calls">
           <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
           <a href="/proposal.html" class="btn-ghost">Request Proposal</a>
         </div>
