--- a/services/professional-training-programme.html
+++ b/services/professional-training-programme.html
@@ -1533,7 +1533,7 @@
           needs and capability assessment. If you already know the pain points,
           we can design a focused programme around them.
         </p>
-        <div class="service-cta__actions">
+        <div class="service-cta__actions" class="cta-calls" id="cta-calls">
           <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
           <a href="/proposal.html" class="btn-ghost">Request Proposal</a>
         </div>
