--- a/services/talent-management-hr-solution.html
+++ b/services/talent-management-hr-solution.html
@@ -1495,7 +1495,7 @@
           Book a strategy call to map where to start—whether that is recruitment,
           policies, payroll, or a full HR transformation.
         </p>
-        <div class="service-cta__actions">
+        <div class="service-cta__actions" class="cta-calls" id="cta-calls">
           <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
           <a href="/proposal.html" class="btn-ghost">Request Proposal</a>
         </div>
