--- a/talent-management-hr-solution/training-development.html
+++ b/talent-management-hr-solution/training-development.html
@@ -1712,7 +1712,7 @@
         your people need to deliver on your strategy—today and in the future.
       </p>
 
-      <div data-aos="fade-up" data-aos="fade-down">
+      <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
         <a href="booking.html" class="btn-solid">Book a session</a>
         <a href="contact.html" class="btn-ghost">Request Proposal</a>
       </div>
