--- a/business-development/auditing-reconciliation.html
+++ b/business-development/auditing-reconciliation.html
@@ -1707,7 +1707,7 @@
         clean up today’s issues and build stronger controls for tomorrow.
       </p>
 
-      <div data-aos="fade-up" data-aos="fade-down">
+      <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
         <a href="booking.html" class="btn-solid">Book a session</a>
         <a href="contact.html" class="btn-ghost">Request Proposal</a>
       </div>
