--- a/business-development/business-process-optimization.html
+++ b/business-development/business-process-optimization.html
@@ -1698,7 +1698,7 @@
         faster operations, better service and stronger control.
       </p>
 
-      <div data-aos="fade-up" data-aos="fade-down">
+      <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
         <a href="booking.html" class="btn-solid">Book a session</a>
         <a href="contact.html" class="btn-ghost">Request Proposal</a>
       </div>
