--- a/business-development/corporate-branding.html
+++ b/business-development/corporate-branding.html
@@ -1696,7 +1696,7 @@
         strategy—and that your teams can proudly represent every day.
       </p>
 
-      <div data-aos="fade-up" data-aos="fade-down">
+      <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
         <a href="booking.html" class="btn-solid">Book a session</a>
         <a href="contact.html" class="btn-ghost">Request Proposal</a>
       </div>
