--- a/business-development/market-research-business-analysis.html
+++ b/business-development/market-research-business-analysis.html
@@ -1720,7 +1720,7 @@
         to back your next strategic bet.
       </p>
 
-      <div data-aos="fade-up" data-aos="fade-down">
+      <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
         <a href="booking.html" class="btn-solid">Book a session</a>
         <a href="contact.html" class="btn-ghost">Request Proposal</a>
       </div>
