--- a/contact.html
+++ b/contact.html
@@ -1061,7 +1061,7 @@
         organizational excellence.
       </p>
 
-      <div data-aos="fade-up" data-aos="fade-down" class="hero-links">
+      <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
         <a
           href="booking.html"
           class="btn-solid"
