--- a/professional-training/leadership-management.html
+++ b/professional-training/leadership-management.html
@@ -1728,7 +1728,7 @@
         culture, strategy and growth plans.
       </p>
 
-      <div data-aos="fade-up" data-aos="fade-down">
+      <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
         <a href="/booking.html" class="btn-solid">Book a session</a>
         <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
