--- a/professional-training/technology-data.html
+++ b/professional-training/technology-data.html
@@ -1735,7 +1735,7 @@
         tools and dashboards into everyday, confident use of data.
       </p>
 
-      <div data-aos="fade-up" data-aos="fade-down">
+      <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
         <a href="/booking.html" class="btn-solid">Book a session</a>
         <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
