--- a/service.html
+++ b/service.html
@@ -1344,7 +1344,7 @@
         organizational excellence.
       </p>
 
-      <div data-aos="fade-up" data-aos="fade-down">
+      <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
         <a href="booking.html" class="btn-solid">Book a Call</a>
         <a href="contact.html" class="btn-ghost">Request Proposal</a>
       </div>
