--- a/talent-management-hr-solution/career-service.html
+++ b/talent-management-hr-solution/career-service.html
@@ -1729,7 +1729,7 @@
         documents and more confident interviews with CICL Career Services.
       </p>
 
-      <div data-aos="fade-up" data-aos="fade-down">
+      <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
         <a href="booking.html" class="btn-solid">Book a session</a>
         <a href="contact.html" class="btn-ghost">Request Proposal</a>
       </div>
