--- a/talent-management-hr-solution/hr-policies-employee-handbook.html
+++ b/talent-management-hr-solution/hr-policies-employee-handbook.html
@@ -1724,7 +1724,7 @@
         into clear, fair and well-governed documentation.
       </p>
 
-      <div data-aos="fade-up" data-aos="fade-down">
+      <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
         <a href="booking.html" class="btn-solid">Book a session</a>
         <a href="contact.html" class="btn-ghost">Request Proposal</a>
       </div>
